# api/route.go
@@ -79,7 +79,7 @@ func (s Server) registeRoute() {
 		schedules.GET("/schedules/:id", MustLogin, s.getScheduleByID)
 		schedules.GET("/schedules", MustLogin, s.querySchedule)
 		schedules.GET("/schedules_time_view", MustLogin, s.getScheduleTimeView)
-		schedules.GET("/schedule_attachment_upload/:ext", MustLogin, s.getAttachmentUploadPath)
+		//schedules.GET("/schedule_attachment_upload/:ext", MustLogin, s.getAttachmentUploadPath)
 	}
 
 }
